codepkg/objects/Group__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>department__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <label>Faculty</label>
        <referenceTo>faculty__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Student_Amount__c</fullName>
        <label>Student Amount</label>
        <summaryForeignKey>Student__c.Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Max_25_students_in_one_group</fullName>
        <active>true</active>
        <errorConditionFormula>MAX(Student_Amount__c)  = 25</errorConditionFormula>
        <errorMessage>Max 25 students in one group</errorMessage>
    </validationRules>
</CustomObject>